# yolov7-pose

YoloLayer_TRT_v7.0/: CMakeLists.txt  yololayer.cu  yololayer.h
yolov7-pose/: CMakeLists.txt
